# Spider_ML_Task_2

./: .env  .gitattributes  README.md  pyproject.toml
Comparison/: README.md  compare.py
applied_domain/: rag.py
applied_domain/.streamlit/: config.toml
applied_domain/faiss_db/: index.faiss
task1/: README.md  cnn.ipynb  cnn.py
task2/: LSTM_Transformer.ipynb  lstm.py  lstm_eval.npz  lstm_weights.pkl
task3/: LSTM_Transformer.ipynb  transformer.py  transformer_eval.npz  transformer_weights.pkl
